--- a/sip-servlets-bootstrap/release/build.xml
+++ b/sip-servlets-bootstrap/release/build.xml
@@ -42,6 +42,7 @@
 	<property name="jboss.home" value="${release.path}/jboss-${jboss.version}" />
 	<property name="jboss-5.home" value="${release.path}/jboss-${jboss-5.version}" />
 	<property name="jboss-5-jdk6.home" value="${release.path}/jboss-jdk6-${jboss-5.version}" />
+	<property name="jboss-5-jdk6.home.temp" value="${release.path}/temp" />
 	<property name="tomcat.home" value="${release.path}/apache-tomcat-${tomcat.version}" />
 	<property name="embjopr.war" value="admin-console.war" />
 	<property name="embjopr.home" value="${release.path}/${embjopr.war}" />
@@ -198,7 +199,7 @@
 	
 	<!-- JBoss 5 jdk6 version -->
 		
-	<target name="release-jboss-5-jdk6" depends="extract-jboss-5-jdk6,extract-jboss-5-torquebox-deployer">
+	<target name="release-jboss-5-jdk6" depends="extract-jboss-5-jdk6,extract-jboss-5-torquebox-deployer-for-jdk6">
 		<for delimiter="," param="jboss.config" list="${mss.release.configurations.jboss5}">
 			<sequential>
 				<ant dir="${base.path}" antfile="build.xml" target="release-jboss-5-node">
@@ -729,7 +730,10 @@
 	
 	<target name="extract-jboss-5-jdk6" depends="get-jboss-5-jdk6">
 		<delete dir="${jboss-5-jdk6.home}" failonerror="true" />
-		<unzip src="${jboss-5.distro.zip.path}" dest="${jboss-5-jdk6.home}/.." />
+		<unzip src="${jboss-5-jdk6.distro.zip.path}" dest="${jboss-5-jdk6.home.temp}"/>
+		<move todir="${jboss-5-jdk6.home}">
+			<fileset dir="${jboss-5-jdk6.home.temp}/jboss-${jboss-5.version}"/>
+		</move>
 		
 		<propertyregex input="${mss.release.configurations.jboss5}" regexp="(\w+)" global="true" replace="**/\1/**" property="used.configurations.jboss5" />
 		<echo>Included profiles: ${mss.release.configurations.jboss5} -&gt; Excludes list: ${used.configurations.jboss5}</echo>
@@ -746,6 +750,10 @@
 	
 	<target name="extract-jboss-5-torquebox-deployer" depends="get-jboss-5-torquebox-deployer">			
 		<unzip src="${jboss-5.torquebox.deployer.zip.path}" dest="${jboss-5.home}/server/default/deployers/torquebox.deployer" />					
+	</target>
+	
+	<target name="extract-jboss-5-torquebox-deployer-for-jdk6" depends="get-jboss-5-torquebox-deployer">			
+		<unzip src="${jboss-5.torquebox.deployer.zip.path}" dest="${jboss-5-jdk6.home}/server/default/deployers/torquebox.deployer" />					
 	</target>
 	
 	<available file="${tomcat.distro.zip.path}" property="got.tomcat" />
