Adding jboss 4.2.3 snapshot
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@10663 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-bootstrap/release/build.xml
+++ b/sip-servlets-bootstrap/release/build.xml
@@ -60,7 +60,7 @@
 	
 	<!-- Release target -->
 	
-	<target name="release" depends="clean,release-jboss-5,release-jboss-5-jdk6,release-tomcat,make-src-zip,clean" />
+	<target name="release" depends="clean,release-jboss-5,release-jboss-5-jdk6,release-tomcat,release-jboss,make-src-zip,clean" />
 	
 	<!-- Tomcat version -->
 	
