reverting to old jain sip for the time being
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@10675 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,7 @@
 		<mobicents.balancer.version>1.0.BETA15-SNAPSHOT</mobicents.balancer.version>
 		<mobicents.jain.sip.ha.version>0.7-SNAPSHOT</mobicents.jain.sip.ha.version>
 		<tomcat.version>6.0.20</tomcat.version>
-		<jain-sip-ri.version>1.2.X.PERF-SNAPSHOT</jain-sip-ri.version>
+		<!--jain-sip-ri.version>1.2.X.PERF-SNAPSHOT</jain-sip-ri.version-->
 	</properties>
 	
 	<dependencies>
