trying to fix hudson job MSS release
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@11366 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/jopr-plugin/pom.xml
+++ b/jopr-plugin/pom.xml
@@ -21,11 +21,11 @@
 	      <name>JBoss Releases Repository</name>
 	      <url>https://repository.jboss.org/nexus/service/local/staging/deploy/maven2/</url>
 	    </repository>
-	    <snapshotRepository>
+	     <repository>
 	      <id>jboss-snapshots-repository</id>
 	      <name>JBoss Snapshots Repository</name>
 	      <url>https://repository.jboss.org/nexus/content/repositories/snapshots/</url>
-	    </snapshotRepository>
+	    </repository>
     </repositories>
 	
     <properties>
