--- a/sip-servlets-bootstrap/release/build.xml
+++ b/sip-servlets-bootstrap/release/build.xml
@@ -108,10 +108,10 @@
 			</sequential>
 		</for>
 		<!-- removing diameter and mms from ha node -->
-		<ant dir="${base.path}" antfile="build.xml" target="build-mobicents-media-server-1.x">
+		<!--ant dir="${base.path}" antfile="build.xml" target="build-mobicents-media-server-1.x">
 			<property name="jboss.home" value="${jboss.home}"/>
 			<property name="jboss.config" value="default"/>
-		</ant>
+		</ant-->
 		<ant dir="${base.path}" antfile="build.xml" target="build-mobicents-diameter">
 			<property name="jboss.home" value="${jboss.home}"/>
 			<property name="jboss.config" value="default"/>
