--- a/pom.xml
+++ b/pom.xml
@@ -87,8 +87,7 @@
 		<mobicents.cluster.version>1.3-SNAPSHOT</mobicents.cluster.version>
 		<mobicents.balancer.version>1.0.CR2-SNAPSHOT</mobicents.balancer.version>
 		<mobicents.jain.sip.ha.version>0.8-SNAPSHOT</mobicents.jain.sip.ha.version>
-		<tomcat.version>6.0.20</tomcat.version>
-		<jain-sip-ri.version>1.2.X.PERF-SNAPSHOT</jain-sip-ri.version>
+		<tomcat.version>6.0.20</tomcat.version>		
 	</properties>
 	
 	<dependencies>
@@ -215,7 +214,10 @@
 			<id>tomcat</id>
 			<activation>
 				<activeByDefault>true</activeByDefault>
-			</activation>	
+			</activation>
+			<properties>
+				<jain-sip-ri.version>1.2.X.PERF-SNAPSHOT</jain-sip-ri.version>
+			</properties>	
 			<modules>				
 				<module>sip-servlets-tomcat-jboss4</module>				
 			</modules>			
@@ -228,6 +230,9 @@
 		</profile>
 		<profile>			
 			<id>jboss-5</id>
+			<properties>
+				<jain-sip-ri.version>1.2.X.PERF-SNAPSHOT</jain-sip-ri.version>
+			</properties>
 			<modules>		
 				<module>sip-servlets-jboss5-metadata</module>	
 				<module>sip-servlets-jboss5-deployer</module>					
@@ -237,6 +242,9 @@
 		</profile>
 		<profile>			
 			<id>tomcat-distro</id>
+			<properties>
+				<jain-sip-ri.version>1.2.X.PERF-SNAPSHOT</jain-sip-ri.version>
+			</properties>	
 			<modules>				
 				<module>sip-servlets-tomcat-jboss4</module>				
 			</modules>			
@@ -249,6 +257,9 @@
 		</profile>
 		<profile>			
 			<id>jboss-5-distro</id>
+			<properties>
+				<jain-sip-ri.version>1.2.X.PERF-SNAPSHOT</jain-sip-ri.version>
+			</properties>	
 			<modules>
 				<module>sip-servlets-jboss5-metadata</module>	
 				<module>sip-servlets-jboss5-deployer</module>					
