--- a/pom.xml
+++ b/pom.xml
@@ -266,6 +266,20 @@
 	<!-- repositories -->
 	<repositories>
 		<repository>
+		  <id>jboss-public-repository-group</id>
+		  <name>JBoss Public Maven Repository Group</name>
+		  <url>https://repository.jboss.org/nexus/content/groups/public/</url>
+		  <layout>default</layout>
+		  <releases>
+		    <enabled>true</enabled>
+		    <updatePolicy>never</updatePolicy>
+		  </releases>
+		  <snapshots>
+		    <enabled>true</enabled>
+		    <updatePolicy>never</updatePolicy>
+		  </snapshots>
+		</repository>
+		<repository>
 			<id>maven2-repository.dev.java.net</id>
 			<name>Java.net Repository for Maven</name>
 			<url>http://download.java.net/maven/2/</url>
