Update Issue 1179 http://code.google.com/p/mobicents/issues/detail?id=1179
Small fixes and preparing for release

git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@11601 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-examples/media-jsr309-servlet/pom.xml
+++ b/sip-servlets-examples/media-jsr309-servlet/pom.xml
@@ -37,13 +37,13 @@
 		<dependency>
 			<groupId>org.mobicents.external.jsr309</groupId>
 			<artifactId>mscontrol</artifactId>
-			<version>${jsr309.mscontrol.version}</version>
+			<version>1.0</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.mobicents.jsr309</groupId>
 			<artifactId>mobicents-jsr309-impl</artifactId>
-			<version>${jsr309.version}</version>
+			<version>2.0.0.BETA4-SNAPSHOT</version>
 		</dependency>
 
 		<!-- j2ee dependencies -->
