--- a/sip-servlets-examples/shopping-demo-jsr309/ear/pom.xml
+++ b/sip-servlets-examples/shopping-demo-jsr309/ear/pom.xml
@@ -129,7 +129,7 @@
 		<dependency>
 			<groupId>org.mobicents.protocols.mgcp</groupId>
 			<artifactId>mgcp-impl</artifactId>
-			<version>2.0.0.RC7</version>
+			<version>2.0.0.GA</version>
 		</dependency>
 		<dependency>
 			<groupId>jain</groupId>
