--- a/sip-servlets-examples/media-jsr309-servlet/pom.xml
+++ b/sip-servlets-examples/media-jsr309-servlet/pom.xml
@@ -43,7 +43,7 @@
 		<dependency>
 			<groupId>org.mobicents.jsr309</groupId>
 			<artifactId>mobicents-jsr309-impl</artifactId>
-			<version>2.0.0.BETA4-SNAPSHOT</version>
+			<version>2.0.0.BETA4</version>
 		</dependency>
 
 		<!-- j2ee dependencies -->
@@ -57,7 +57,7 @@
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-spec</artifactId>
-			<version>1.1.13-SNAPSHOT</version>
+			<version>1.1.12</version>
 			<scope>provided</scope>
 		</dependency>
 
