--- a/sip-servlets-examples/shopping-demo-jsr309/business/pom.xml
+++ b/sip-servlets-examples/shopping-demo-jsr309/business/pom.xml
@@ -18,7 +18,7 @@
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-spec</artifactId>
-			<version>1.1.13-SNAPSHOT</version>
+			<version>1.1.12</version>
 			<scope>provided</scope>
 		</dependency>
 		<!-- test dependencies -->
@@ -154,7 +154,7 @@
 		<dependency>
 			<groupId>org.mobicents.jsr309</groupId>
 			<artifactId>mobicents-jsr309-impl</artifactId>
-			<version>2.0.0.BETA4-SNAPSHOT</version>
+			<version>2.0.0.BETA4</version>
 		</dependency>
 	</dependencies>
 	<build>
