--- a/sip-servlets-examples/conference-demo-jsr309/pom.xml
+++ b/sip-servlets-examples/conference-demo-jsr309/pom.xml
@@ -117,7 +117,7 @@
 		<dependency>
 			<groupId>org.mobicents.jsr309</groupId>
 			<artifactId>mobicents-jsr309-impl</artifactId>
-			<version>2.0.0.BETA4-SNAPSHOT</version>
+			<version>2.0.0.BETA4</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-logging</groupId>
@@ -135,7 +135,7 @@
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-spec</artifactId>
-			<version>1.1.13-SNAPSHOT</version>
+			<version>1.1.12</version>
 			<scope>provided</scope>
 		</dependency>
 		
