--- a/sip-servlets-examples/diameter-ro-rf/diameter-ro-rf-servlet-dar.properties
+++ b/sip-servlets-examples/diameter-ro-rf/diameter-ro-rf-servlet-dar.properties
@@ -1,1 +1,2 @@
 INVITE: ("org.mobicents.servlet.sip.example.DiameterRoRfSipServlet", "DAR:From", "ORIGINATING", "", "NO_ROUTE", "0")
+REGISTER: ("org.mobicents.servlet.sip.example.DiameterRoRfSipServlet", "DAR:From", "ORIGINATING", "", "NO_ROUTE", "0")
