git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@11711 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-examples/diameter-ro-rf/diameter-ro-rf-servlet-dar.properties
+++ b/sip-servlets-examples/diameter-ro-rf/diameter-ro-rf-servlet-dar.properties
@@ -1,2 +1,2 @@
-INVITE: ("org.mobicents.servlet.sip.example.DiameterRoRfSipServlet", "DAR:From", "ORIGINATING", "", "NO_ROUTE", "0")
-REGISTER: ("org.mobicents.servlet.sip.example.DiameterRoRfSipServlet", "DAR:From", "ORIGINATING", "", "NO_ROUTE", "0")
+INVITE: ("org.mobicents.servlet.sip.example.DiameterRoRfApplication", "DAR:From", "ORIGINATING", "", "NO_ROUTE", "0")
+REGISTER: ("org.mobicents.servlet.sip.example.DiameterRoRfApplication", "DAR:From", "ORIGINATING", "", "NO_ROUTE", "0")
