--- a/sip-servlets-bootstrap/release/mss-sip-stack-jboss-5-all.properties
+++ b/sip-servlets-bootstrap/release/mss-sip-stack-jboss-5-all.properties
@@ -10,5 +10,6 @@ gov.nist.javax.sip.REENTRANT_LISTENER=true
 # setting up the buffer size to reduce retransmissions and avoid loosing messages
 gov.nist.javax.sip.RECEIVE_UDP_BUFFER_SIZE=65536
 gov.nist.javax.sip.SEND_UDP_BUFFER_SIZE=65536
+gov.nist.javax.sip.AGGRESSIVE_CLEANUP=true
 #cache used by jain sip ha to replicate dialogs
 org.mobicents.ha.javax.sip.cache.MobicentsSipCache.cacheName=standard-session-cache
