--- a/sip-servlets-bootstrap/release/mss-sip-stack-jboss-5.properties
+++ b/sip-servlets-bootstrap/release/mss-sip-stack-jboss-5.properties
@@ -10,6 +10,7 @@ gov.nist.javax.sip.REENTRANT_LISTENER=true
 # setting up the buffer size to reduce retransmissions and avoid loosing messages
 gov.nist.javax.sip.RECEIVE_UDP_BUFFER_SIZE=65536
 gov.nist.javax.sip.SEND_UDP_BUFFER_SIZE=65536
+gov.nist.javax.sip.AGGRESSIVE_CLEANUP=true
 #no cache specified since in non ha mode we don't replicate
 org.mobicents.ha.javax.sip.cache.MobicentsSipCache.standalone=true
 org.mobicents.ha.javax.sip.CACHE_CLASS_NAME=org.mobicents.ha.javax.sip.cache.NoCache
