--- a/sip-servlets-bootstrap/release/mss-sip-stack-jboss.properties
+++ b/sip-servlets-bootstrap/release/mss-sip-stack-jboss.properties
@@ -10,3 +10,4 @@ gov.nist.javax.sip.REENTRANT_LISTENER=true
 # setting up the buffer size to reduce retransmissions and avoid loosing messages
 gov.nist.javax.sip.RECEIVE_UDP_BUFFER_SIZE=65536
 gov.nist.javax.sip.SEND_UDP_BUFFER_SIZE=65536
+gov.nist.javax.sip.AGGRESSIVE_CLEANUP=true
