Adding the aggressive cleanup flag
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@11720 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-test-suite/sipp-scenarios/performance/jboss-5-setup/mss-sip-stack-jboss.properties
+++ b/sip-servlets-test-suite/sipp-scenarios/performance/jboss-5-setup/mss-sip-stack-jboss.properties
@@ -14,3 +14,4 @@ gov.nist.javax.sip.CONGESTION_CONTROL_ENABLED=false
 #no cache specified since in non ha mode we don't replicate
 org.mobicents.ha.javax.sip.cache.MobicentsSipCache.standalone=true
 org.mobicents.ha.javax.sip.CACHE_CLASS_NAME=org.mobicents.ha.javax.sip.cache.NoCache
+gov.nist.javax.sip.MESSAGE_PARSER_FACTORY=gov.nist.javax.sip.parser.chars.CharsMsgParserFactory
