--- a/sip-servlets-test-suite/sipp-scenarios/clustering/setup/jboss-5/mss-sip-stack-jboss.properties
+++ b/sip-servlets-test-suite/sipp-scenarios/clustering/setup/jboss-5/mss-sip-stack-jboss.properties
@@ -8,3 +8,4 @@ gov.nist.javax.sip.DELIVER_UNSOLICITED_NOTIFY=true
 gov.nist.javax.sip.THREAD_POOL_SIZE=64
 gov.nist.javax.sip.REENTRANT_LISTENER=true
 org.mobicents.ha.javax.sip.cache.MobicentsSipCache.cacheName=standard-session-cache
+gov.nist.javax.sip.AGGRESSIVE_CLEANUP=true
