--- a/sip-servlets-test-suite/sipp-scenarios/clustering/setup/jboss/performance/mss-sip-stack.properties
+++ b/sip-servlets-test-suite/sipp-scenarios/clustering/setup/jboss/performance/mss-sip-stack.properties
@@ -9,3 +9,4 @@ gov.nist.javax.sip.THREAD_POOL_SIZE=64
 gov.nist.javax.sip.REENTRANT_LISTENER=true
 gov.nist.javax.sip.RECEIVE_UDP_BUFFER_SIZE=65536
 gov.nist.javax.sip.SEND_UDP_BUFFER_SIZE=65536
+gov.nist.javax.sip.AGGRESSIVE_CLEANUP=true
