Rename artifacts so they dont collide with non jsr-309 version
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@11723 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-examples/shopping-demo-jsr309/business/pom.xml
+++ b/sip-servlets-examples/shopping-demo-jsr309/business/pom.xml
@@ -2,10 +2,10 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.mobicents.servlet.sip.example</groupId>
-		<artifactId>shopping-demo-parent</artifactId>
+		<artifactId>shopping-demo-parent-jsr309</artifactId>
 		<version>1.7-SNAPSHOT</version>
 	</parent>
-	<artifactId>shopping-demo-business</artifactId>
+	<artifactId>shopping-demo-business-jsr309</artifactId>
 	<packaging>jar</packaging>
 	<name>Shopping Demo Business</name>
 	<dependencies>
