--- a/sip-servlets-examples/shopping-demo-jsr309/web/pom.xml
+++ b/sip-servlets-examples/shopping-demo-jsr309/web/pom.xml
@@ -2,16 +2,16 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.mobicents.servlet.sip.example</groupId>
-		<artifactId>shopping-demo-parent</artifactId>
+		<artifactId>shopping-demo-parent-jsr309</artifactId>
 		<version>1.7-SNAPSHOT</version>
 	</parent>
-	<artifactId>shopping-demo-web</artifactId>
+	<artifactId>shopping-demo-web-jsr309</artifactId>
 	<packaging>war</packaging>
 	<name>Shopping Demo WebApp</name>
 	<dependencies>
 		<dependency>
 			<groupId>org.mobicents.servlet.sip.example</groupId>
-			<artifactId>shopping-demo-business</artifactId>
+			<artifactId>shopping-demo-business-jsr309</artifactId>
 			<version>1.7-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
@@ -64,7 +64,7 @@
 		<dependency>
 			<groupId>org.mobicents.jsr309</groupId>
 			<artifactId>mobicents-jsr309-impl</artifactId>
-			<version>2.0.0.BETA4/version>
+			<version>2.0.0.BETA4</version>
 			<scope>provided</scope>
 		</dependency>
 		<!-- j2ee dependencies -->
