Adding jsr 309 examples to parent pom
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@11731 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-examples/pom.xml
+++ b/sip-servlets-examples/pom.xml
@@ -21,6 +21,7 @@
 		<module>click2call-distributable</module>
 		<module>click-to-call</module>
 		<module>conference-demo</module>
+		<module>conference-demo-jsr309</module>
 		<module>diameter-event-charging</module>
 		<module>diameter-openims</module>
 		<module>facebook-c2c</module>
@@ -33,6 +34,7 @@
 		<module>shootist-sip-servlet</module>
 		<module>shootist-sip-servlet-distributable</module>
 		<module>shopping-demo</module>
+		<module>shopping-demo-jsr309</module>
 		<module>simple-sip-servlet</module>
 		<module>simple-sip-servlet-distributable</module>
 		<module>speed-dial</module>
