--- a/sip-servlets-test-suite/sipp-scenarios/performance/jboss-5-setup/mss-sip-stack-jboss.properties
+++ b/sip-servlets-test-suite/sipp-scenarios/performance/jboss-5-setup/mss-sip-stack-jboss.properties
@@ -11,7 +11,8 @@ gov.nist.javax.sip.REENTRANT_LISTENER=true
 gov.nist.javax.sip.RECEIVE_UDP_BUFFER_SIZE=65536
 gov.nist.javax.sip.SEND_UDP_BUFFER_SIZE=65536
 gov.nist.javax.sip.CONGESTION_CONTROL_ENABLED=false
+gov.nist.javax.sip.AGGRESSIVE_CLEANUP=true
 #no cache specified since in non ha mode we don't replicate
 org.mobicents.ha.javax.sip.cache.MobicentsSipCache.standalone=true
 org.mobicents.ha.javax.sip.CACHE_CLASS_NAME=org.mobicents.ha.javax.sip.cache.NoCache
-gov.nist.javax.sip.MESSAGE_PARSER_FACTORY=gov.nist.javax.sip.parser.chars.CharsMsgParserFactory
+#gov.nist.javax.sip.MESSAGE_PARSER_FACTORY=gov.nist.javax.sip.parser.chars.CharsMsgParserFactory
