git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@11776 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,18 @@
 		<developerConnection>scm:svn:https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets</developerConnection>
 		<url>http://code.google.com/p/mobicents/source/browse/trunk/servers/sip-servlets</url>
 	</scm>
+<distributionManagement>
+    <repository>
+      <id>jboss-releases-repository</id>
+      <name>JBoss Releases Repository</name>
+      <url>https://repository.jboss.org/nexus/service/local/staging/deploy/maven2/</url>
+    </repository>
+    <snapshotRepository>
+      <id>jboss-snapshots-repository</id>
+      <name>JBoss Snapshots Repository</name>
+      <url>https://repository.jboss.org/nexus/content/repositories/snapshots/</url>
+    </snapshotRepository>
+  </distributionManagement>
 	<modules>
 		<module>sip-servlets-bootstrap</module>
 		<module>sip-servlets-spec</module>
