--- a/pom.xml
+++ b/pom.xml
@@ -86,7 +86,7 @@
 		<mobicents.tools.mavenplugin.eclipse.version>1.0.0.BETA2</mobicents.tools.mavenplugin.eclipse.version>
 		<mobicents.cluster.version>1.3</mobicents.cluster.version>
 		<mobicents.balancer.version>1.0.0.FINAL</mobicents.balancer.version>
-		<mobicents.jain.sip.ha.version>0.8</mobicents.jain.sip.ha.version>
+		<mobicents.jain.sip.ha.version>0.9-SNAPSHOT</mobicents.jain.sip.ha.version>
 		<tomcat.version>6.0.20</tomcat.version>	
 	</properties>
 	
@@ -274,12 +274,6 @@
 		    <enabled>true</enabled>
 		    <updatePolicy>never</updatePolicy>
 		  </snapshots>
-		</repository>
-		<repository>
-			<id>maven2-repository.dev.java.net</id>
-			<name>Java.net Repository for Maven</name>
-			<url>http://download.java.net/maven/2/</url>
-			<layout>default</layout>
 		</repository>
 		<repository>			
 			<id>JbossRepository</id>
