Fix to hudson job - no need to build mms doco anymore since it is bundled with it
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@12163 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-bootstrap/release/build.xml
+++ b/sip-servlets-bootstrap/release/build.xml
@@ -542,9 +542,9 @@
 	<target name="build-documentation" depends="get-documentation">
 		<echo>Building documentation</echo>
 		
-		<exec executable="${mvn.executable}" dir="${docs.stage.dir}/media/">
+		<!--exec executable="${mvn.executable}" dir="${docs.stage.dir}/media/">
 			<arg line="clean compile" />
-		</exec>
+		</exec-->
 		<exec executable="${mvn.executable}" dir="${docs.stage.dir}/sip-servlets/">
 			<arg line="clean install" />
 		</exec>
