--- a/pom.xml
+++ b/pom.xml
@@ -84,7 +84,7 @@
 	<properties>
 		<!-- MOBICENTS TOOL VERSIONS -->
 		<mobicents.tools.mavenplugin.eclipse.version>1.0.0.BETA2</mobicents.tools.mavenplugin.eclipse.version>
-		<mobicents.cluster.version>1.3</mobicents.cluster.version>
+		<mobicents.cluster.version>1.4-SNAPSHOT</mobicents.cluster.version>
 		<mobicents.balancer.version>1.0.0.FINAL</mobicents.balancer.version>
 		<mobicents.jain.sip.ha.version>0.9-SNAPSHOT</mobicents.jain.sip.ha.version>
 		<tomcat.version>6.0.20</tomcat.version>	
